# fluenceAI

./: .gitignore  Cargo.toml  fluence.yaml  package-lock.json
.fluence/: provider-artifacts.yaml  provider-secrets.yaml  workers.yaml
.fluence/aqua/: deals.aqua  services.aqua
.fluence/configs/: nox-0_Config.toml  nox-1_Config.toml  nox-2_Config.toml
src/aqua/: main.aqua
src/frontend/: index.html  package-lock.json  package.json
src/frontend-new/: package-lock.json  package.json
src/frontend-new/src/app/: layout.tsx  page.tsx
src/frontend-new/src/components/: dashboard.tsx
src/frontend-new/src/components/svgs/: LoadingSVG.tsx
src/frontend-new/src/components/ui/: text.tsx
src/frontend-new/src/lib/: constants.ts  openai.ts
src/frontend/src/: index.js
src/gateway/: package-lock.json  package.json
src/gateway/src/: dev.js  relays.json
src/gateway/src/app/: index.js
src/gateway/src/compiled-aqua/: main.d.ts  main.js
src/services/myService/: service.yaml
src/services/myService/curl-adapter/: Cargo.toml  module.yaml
src/services/myService/curl-adapter/src/: main.rs
src/services/myService/gpt/: Cargo.toml  module.yaml
src/services/myService/gpt/src/: curl_transport.rs  main.rs
src/services/myService/llama/: Cargo.toml  module.yaml
src/services/myService/llama/src/: main.rs
src/services/myService/myService/: Cargo.toml  module.yaml
src/services/myService/myService/src/: main.rs
